modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/constraint_pss_deny_all.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AppArmor
metadata:
  name: pss-deny-all
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchLabels:
        enforce: deny-all
  parameters:
    allowedProfiles:
    - runtime/default
