modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/test_samples/constraint_templates/pss_baseline/003-allowed-multiple-containers-all-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-multiple-containers-all-allowed
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
    - name: redis
      image: redis
      securityContext:
        appArmorProfile:
          type: Localhost
          localhostProfile: redis-profile
