modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/test_samples/constraint_templates/pss_baseline/005-allowed-pod-securityContext-runtime-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod-securityContext-runtime-default
  namespace: testns
spec:
  securityContext:
    appArmorProfile:
      type: RuntimeDefault
  containers:
    - name: nginx
      image: nginx
