modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/test_samples/constraint_templates/pss_baseline/007-allowed-runtime-default-securityContext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-runtime-default-securityContext
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
