modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/test_samples/constraint_templates/pss_baseline/008-disallowed-initContainer-unconfined.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-initContainer-unconfined
  namespace: testns
spec:
  initContainers:
    - name: init
      image: busybox
      securityContext:
        appArmorProfile:
          type: Unconfined
  containers:
    - name: nginx
      image: nginx
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
