modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/test_samples/constraint_templates/pss_baseline/009-disallowed-multiple-containers-one-unconfined.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-multiple-containers-one-unconfined
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
    - name: redis
      image: redis
      securityContext:
        appArmorProfile:
          type: Unconfined
