modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-apparmor-profiles/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-apparmor-profiles
tests:
- name: pss-baseline
  template: ../../templates/security/allowed-apparmor-profiles.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 004-allowed-no-apparmor-profile
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-allowed-no-apparmor-profile.yaml
    assertions:
    - violations: no
  - name: 007-allowed-runtime-default-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/007-allowed-runtime-default-securityContext.yaml
    assertions:
    - violations: no
  - name: 002-allowed-localhost-profile-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-localhost-profile-securityContext.yaml
    assertions:
    - violations: no
  - name: 006-allowed-runtime-default-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/006-allowed-runtime-default-annotation.yaml
    assertions:
    - violations: no
  - name: 001-allowed-localhost-profile-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-localhost-profile-annotation.yaml
    assertions:
    - violations: no
  - name: 005-allowed-pod-securityContext-runtime-default
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-allowed-pod-securityContext-runtime-default.yaml
    assertions:
    - violations: no
  - name: 003-allowed-multiple-containers-all-allowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-allowed-multiple-containers-all-allowed.yaml
    assertions:
    - violations: no
  - name: 011-disallowed-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/011-disallowed-unconfined-securityContext.yaml
    assertions:
    - violations: yes
  - name: 010-disallowed-unconfined-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/010-disallowed-unconfined-annotation.yaml
    assertions:
    - violations: yes
  - name: 009-disallowed-multiple-containers-one-unconfined
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/009-disallowed-multiple-containers-one-unconfined.yaml
    assertions:
    - violations: yes
  - name: 008-disallowed-initContainer-unconfined
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/008-disallowed-initContainer-unconfined.yaml
    assertions:
    - violations: yes
- name: pss-baseline-with-exception
  template: ../../templates/security/allowed-apparmor-profiles.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 016-022-allowed-by-exception-unconfined
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-unconfined.yaml
    object: test_samples/security_policy_exceptions/pods/022-allowed-by-exception-unconfined.yaml
    assertions:
    - violations: no
  - name: 015-021-allowed-by-exception-runtime-default
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-runtime-default.yaml
    object: test_samples/security_policy_exceptions/pods/021-allowed-by-exception-runtime-default.yaml
    assertions:
    - violations: no
  - name: 013-018-allowed-by-exception-localhost-profile
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-localhost-profile.yaml
    object: test_samples/security_policy_exceptions/pods/018-allowed-by-exception-localhost-profile.yaml
    assertions:
    - violations: no
  - name: 014-020-allowed-by-exception-multiple-containers-all-allowed
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/014-allow-multiple-profiles.yaml
    object: test_samples/security_policy_exceptions/pods/020-allowed-by-exception-multiple-containers-all-allowed.yaml
    assertions:
    - violations: no
  - name: 015-025-disallowed-by-exception-profile-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-runtime-default.yaml
    object: test_samples/security_policy_exceptions/pods/025-disallowed-by-exception-profile-mismatch.yaml
    assertions:
    - violations: yes
- name: pss-baseline-restrictive-with-exception
  template: ../../templates/security/allowed-apparmor-profiles.yaml
  constraint: constraint_pss_deny_all.yaml
  cases:
  - name: 013-023-disallowed-by-exception-localhost-profile-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-localhost-profile.yaml
    object: test_samples/security_policy_exceptions/pods/023-disallowed-by-exception-localhost-profile-mismatch.yaml
    assertions:
    - violations: yes
  - name: 013-018-allowed-by-exception-localhost-profile-restrictive
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-localhost-profile.yaml
    object: test_samples/security_policy_exceptions/pods/018-allowed-by-exception-localhost-profile.yaml
    assertions:
    - violations: no
  - name: 016-022-allowed-by-exception-unconfined-restrictive
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-unconfined.yaml
    object: test_samples/security_policy_exceptions/pods/022-allowed-by-exception-unconfined.yaml
    assertions:
    - violations: no
  - name: 015-025-disallowed-by-exception-profile-mismatch-restrictive
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-runtime-default.yaml
    object: test_samples/security_policy_exceptions/pods/025-disallowed-by-exception-profile-mismatch.yaml
    assertions:
    - violations: yes
  - name: 015-024-disallowed-by-exception-multiple-containers-one-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-runtime-default.yaml
    object: test_samples/security_policy_exceptions/pods/024-disallowed-by-exception-multiple-containers-one-mismatch.yaml
    assertions:
    - violations: yes
  - name: 026-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/026-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 016-019-allowed-by-exception-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-unconfined.yaml
    object: test_samples/security_policy_exceptions/pods/019-allowed-by-exception-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: no
  - name: 018-028-allowed-by-container-specific-exception-unconfined
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/018-allow-unconfined-container.yaml
    object: test_samples/security_policy_exceptions/pods/028-allowed-by-container-exception-unconfined.yaml
    assertions:
    - violations: no
  - name: 015-016-018-029-allowed-by-merged-exception-container-overrides-global
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-runtime-default.yaml
    - test_samples/security_policy_exceptions/exceptions/018-allow-unconfined-container.yaml
    object: test_samples/security_policy_exceptions/pods/029-allowed-by-merged-exception-container-overrides-global.yaml
    assertions:
    - violations: no
  - name: 017-027-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/017-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/027-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
